--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
               <a href="#!" class="places__card-link"></a>
             </figure>
             <figure class="places__card places__card_size_sm">
-              <img src="./local/img/Niigata-1.jpg" alt="Niigata" class="places__card-pic places__card-pic_size_sm">
+              <img src="./local/img/NIIGATA-1.jpg" alt="Niigata" class="places__card-pic places__card-pic_size_sm">
               <figcaption class="places__card-title">
                 Niigata
               </figcaption>
