--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,16 @@
                 <a href="#!" class="header__link">Sign in</a>
               </li>
             </ul>
+            <div class="header__nav-close">
+              <span class="header__nav-close-line"></span>
+              <span class="header__nav-close-line"></span>
+            </div>
           </nav>
+          <div class="header__burger burger">
+            <span class="burger__line burger_line_first"></span>
+            <span class="burger__line burger_line_second"></span>
+            <span class="burger__line burger_line_third"></span>
+          </div>
         </div>
       </div>
     </header>
